--- a/Carporate/package.json
+++ b/Carporate/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-firebase/functions": "^14.3.1",
     "@react-native-picker/picker": "2.2.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
@@ -20,18 +21,20 @@
     "expo": "^44.0.4",
     "expo-app-auth": "~11.1.0",
     "expo-app-loading": "~1.3.0",
-    "expo-camera": "~12.1.0",
+    "expo-camera": "~12.1.2",
     "expo-file-system": "~13.1.2",
     "expo-font": "~10.0.4",
     "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "~10.1.0",
-    "expo-linear-gradient": "~11.0.1",
+    "expo-linear-gradient": "~11.0.3",
     "expo-local-authentication": "~12.1.0",
     "expo-location": "~14.0.1",
     "expo-navigation-bar": "~1.1.1",
     "expo-notifications": "~0.14.0",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^9.6.6",
+    "firebase": "^8.10.1",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.17.2",
     "jetifier": "^2.0.0",
     "moment": "^2.29.1",
     "react": "17.0.1",
