--- a/Carporate/package.json
+++ b/Carporate/package.json
@@ -31,6 +31,7 @@
     "expo-location": "~14.0.1",
     "expo-navigation-bar": "~1.1.1",
     "expo-notifications": "~0.14.0",
+    "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
     "firebase": "^8.10.1",
     "firebase-admin": "^10.0.2",
