--- a/Carporate/package.json
+++ b/Carporate/package.json
@@ -22,7 +22,7 @@
     "expo-app-auth": "~11.1.0",
     "expo-app-loading": "~1.3.0",
     "expo-camera": "~12.1.2",
-    "expo-file-system": "~13.1.2",
+    "expo-file-system": "~13.1.4",
     "expo-font": "~10.0.4",
     "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "~10.1.0",
@@ -43,6 +43,7 @@
     "react-native": "0.64.3",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.29.4",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
