--- a/Carporate/package.json
+++ b/Carporate/package.json
@@ -27,6 +27,7 @@
     "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "~10.1.0",
     "expo-linear-gradient": "~11.0.3",
+    "expo-linking": "~3.0.0",
     "expo-local-authentication": "~12.1.0",
     "expo-location": "~14.0.1",
     "expo-navigation-bar": "~1.1.1",
