--- a/Carporate/package.json
+++ b/Carporate/package.json
@@ -46,6 +46,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.29.4",
+    "react-native-modal-picker": "^0.0.16",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
