--- a/Carporate/package.json
+++ b/Carporate/package.json
@@ -34,7 +34,7 @@
     "expo-notifications": "~0.14.0",
     "expo-permissions": "~13.1.0",
     "expo-status-bar": "~1.2.0",
-    "firebase": "^8.10.1",
+    "firebase": "^9.8.1",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.17.2",
     "jetifier": "^2.0.0",
@@ -42,6 +42,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-google-places-autocomplete": "^2.4.1",
