--- a/Carporate/package.json
+++ b/Carporate/package.json
@@ -22,6 +22,7 @@
     "expo-app-auth": "~11.1.0",
     "expo-app-loading": "~1.3.0",
     "expo-camera": "~12.1.2",
+    "expo-checkbox": "~2.0.0",
     "expo-file-system": "~13.1.4",
     "expo-font": "~10.0.4",
     "expo-google-app-auth": "~8.3.0",
