--- a/Carporate/package.json
+++ b/Carporate/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/datetimepicker": "4.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/functions": "^14.3.1",
     "@react-native-picker/picker": "2.2.1",
-    "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.1.8",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.11",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@rneui/base": "^4.0.0-rc.4",
+    "@rneui/themed": "github:react-native-elements/react-native-elements#themed",
     "expo": "^44.0.4",
     "expo-app-auth": "~11.1.0",
     "expo-app-loading": "~1.3.0",
@@ -49,9 +52,12 @@
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-maps": "0.29.4",
     "react-native-modal-picker": "^0.0.16",
+    "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "^3.4.1",
     "react-native-screens": "~3.10.1",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
     "react-navigation-drawer": "^2.7.1",
